--- a/src/assets/examples/form-field-basic/form-field-basic.component.html
+++ b/src/assets/examples/form-field-basic/form-field-basic.component.html
@@ -4,10 +4,9 @@
       type="text"
       matInput
       autocomplete="off"
-      (focus)="value = ''"
       [(ngModel)]="value"
-      (blur)="value = 'All Member'"
-      placeholder="Member"
+      (blur)="value = 'Input here'"
+      placeholder="Form label"
     />
   </mat-form-field>
 </div>
