--- a/src/assets/examples/form-field-disable/form-field-disable.component.html
+++ b/src/assets/examples/form-field-disable/form-field-disable.component.html
@@ -4,10 +4,8 @@
       type="text"
       matInput
       autocomplete="off"
-      (focus)="value = ''"
       [(ngModel)]="value"
-      (blur)="value = 'All Member'"
-      placeholder="Member"
+      placeholder="Form label disabled"
       disabled="true"
     />
   </mat-form-field>
