--- a/src/assets/examples/form-field-error/form-field-error.component.html
+++ b/src/assets/examples/form-field-error/form-field-error.component.html
@@ -1,16 +1,16 @@
 <div class="example-centralization">
   <mat-form-field class="example-full-width">
-    <input matInput placeholder="Email" [formControl]="emailFormControl" />
-    <mat-error
+    <input matInput placeholder="Form label error" [formControl]="emailFormControl" value="Input here" />
+    <!-- <mat-error
       *ngIf="
         emailFormControl.hasError('email') &&
         !emailFormControl.hasError('required')
       "
     >
       Please enter a valid email address
-    </mat-error>
-    <mat-error *ngIf="emailFormControl.hasError('required')">
+    </mat-error> -->
+    <!-- <mat-error *ngIf="emailFormControl.hasError('required')">
       Email is <strong>required</strong>
-    </mat-error>
+    </mat-error> -->
   </mat-form-field>
 </div>
