--- a/src/assets/examples/form-field-hint/form-field-hint.component.html
+++ b/src/assets/examples/form-field-hint/form-field-hint.component.html
@@ -6,8 +6,7 @@
       autocomplete="off"
       (focus)="value = ''"
       [(ngModel)]="value"
-      (blur)="value = 'All Member'"
-      placeholder="Member"
+      placeholder="Form label"
     />
     <mat-hint align="start">Form hint</mat-hint>
   </mat-form-field>
