--- a/src/assets/examples/form-field-autocomplete-icon/form-field-autocomplete-icon.component.html
+++ b/src/assets/examples/form-field-autocomplete-icon/form-field-autocomplete-icon.component.html
@@ -3,6 +3,9 @@
     <input type="text" placeholder="Autocomplete" aria-label="Assignee" matInput [formControl]="myControl" [matAutocomplete]="auto">
     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn" class="viz-autocomplete-dropdown">
       <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+        <mat-icon>
+          {{option.icon}}
+        </mat-icon>
         {{option.name}}
       </mat-option>
     </mat-autocomplete>
