Update List component content

--- a/src/document.scss
+++ b/src/document.scss
@@ -514,27 +514,25 @@ a {
 .oktajs-code {
   overflow: auto;
 }
-
 .icon-cell {
   margin-right: 54px;
   margin-bottom: 32px;
   font-size: 24px;
   width: 24px;
 }
-
 .icons-container {
   margin-top: 24px;
   margin-bottom: -24px;
 }
-
 .mt-40 {
   margin-top: 40px;
 }
-
 .mb-8 {
   margin-bottom: 8px;
 }
-
 .mb-16 {
-  margin-bottom: 16px
+  margin-bottom: 16px;
+}
+.mb-24 {
+  margin-bottom: 24px;
 }
