--- a/src/assets/documents/components/list.html
+++ b/src/assets/documents/components/list.html
@@ -17,26 +17,29 @@
 
   <div class="doc-divider">
   </div>
-  <div class="doc-title-2">
+  <div class="doc-title-2 mb-24">
     Examples
     <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
 
-  <div class="doc-desc-2">
-    Single-line list items with divider.
+  <div class="doc-title-4 mb-8">
+    Basic List without Divider
+  </div>
+  <div class="doc-desc-2 mb-16">
+    Single-line list items contain a maximum of one line of text without divider.
   </div>
   <div class="doc-example-container">
-    <div app-docs-example="list-basic"></div>
+    <div app-docs-example="list-nodivider"></div>
   </div>
 
   <div id="exampleWrapper">
-    <div class="doc-desc-2">
-      Single-line list items without divider.
+    <div class="doc-title-4 mb-16">
+      Basic List with Divider
     </div>
     <div class="doc-example-container">
-      <div app-docs-example="list-nodivider"></div>
+      <div app-docs-example="list-basic"></div>
     </div>
   </div>
 
@@ -126,7 +129,8 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+  </div>
+  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
