--- a/src/assets/examples/tabs-narrow/tabs-narrow.component.css
+++ b/src/assets/examples/tabs-narrow/tabs-narrow.component.css
@@ -1,12 +1,5 @@
 .tabs-wrap-narrow {
-  width: 40%;
+  width: 360px;
   margin: 0 auto;
 }
 
-::ng-deep .tabs-wrap-narrow .mat-tab-labels {
-  justify-content: space-around;
-}
-
-::ng-deep .tabs-wrap-narrow .mat-tab-label {
-  max-width: 100%;
-}
