--- a/src/assets/examples/date-picker-min-max-validation/date-picker-min-max-validation.component.html
+++ b/src/assets/examples/date-picker-min-max-validation/date-picker-min-max-validation.component.html
@@ -1,6 +1,6 @@
 <div class="example-wrapper">
-  <mat-form-field>
-    <input matInput [matDatepicker]="picker" placeholder="Choose a date">
+  <mat-form-field class="example-full-width">
+    <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="picker" placeholder="Choose a date">
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker #picker></mat-datepicker>
   </mat-form-field>
