--- a/src/assets/documents/components/menu.html
+++ b/src/assets/documents/components/menu.html
@@ -22,19 +22,33 @@
 
   <div class="doc-divider">
   </div>
-  <div class="doc-title-2">
+  <div class="doc-title-2 mb-24">
     Examples
     <span class="docs-more-example" doc-viewer-extend="exampleWrapper"></span>
     <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
-  <div class="doc-desc-2">
+  <div class="doc-title-4 mb-8">
+    Basic Menu
+  </div>
+  <div class="doc-desc-2 mb-16">
     Menus allow users make a selection from multiple options. </div>
   <div class="doc-example-container">
     <div app-docs-example="menu-basic"></div>
   </div>
 
   <div class="" id="exampleWrapper">
+
+    <div class="doc-title-4 mb-8">
+      Menu with Icons
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="menu-icon"></div>
+    </div>
+
+    <div class="doc-title-4 mb-8">
+      Nested Menu
+    </div>
     <div class="doc-example-container" style="margin-top:16px">
       <div app-docs-example="menu-nested"></div>
     </div>
@@ -184,7 +198,8 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+  </div>
+  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
