--- a/src/assets/documents/components/select.html
+++ b/src/assets/documents/components/select.html
@@ -24,19 +24,44 @@
       <span header-link="examples"></span>Examples</span>
   </div>
 
+  <div class="doc-title-4 mb-8">Basic Select</div>
   <div class="doc-desc-2">
     In simple select, option menus positioned under their emitting elements such that the currently selected menu item appears
-    under of the emitting element. </div>
+    under of the emitting element.
+  </div>
   <div class="doc-example-container">
     <div app-docs-example="select-basic"></div>
   </div>
 
   <div id="exampleWrapper">
-    <div class="doc-desc-2">
-      A disabled select is unusable and un-clickable and are rendered in gray by default in browsers. </div>
+
+    <div class="doc-title-4 mb-16">Select in Error State</div>
+    <div class="doc-example-container">
+      <div app-docs-example="select-error-state"></div>
+    </div>
+
+    <div class="doc-title-4 mb-8">Disabled Select</div>
+    <div class="doc-desc-2">A disabled select is unusable and un-clickable and are rendered in gray by default in browsers. </div>
     <div class="doc-example-container">
       <div app-docs-example="select-disable"></div>
     </div>
+
+    <div class="doc-title-4 mb-16">Select with Option Groups</div>
+    <div class="doc-example-container">
+      <div app-docs-example="select-group-option"></div>
+    </div>
+
+    <div class="doc-title-4 mb-16">Select with Multiple Selection</div>
+    <div class="doc-example-container">
+      <div app-docs-example="select-multiple-selection"></div>
+    </div>
+
+    <div class="doc-title-4 mb-16">Select with Custom Trigger Text</div>
+    <div class="doc-example-container">
+      <div app-docs-example="select-trigger-text"></div>
+    </div>
+
+    
 
   </div>
 
@@ -136,7 +161,8 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+  </div>
+  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
