--- a/src/assets/documents/components/tree.html
+++ b/src/assets/documents/components/tree.html
@@ -23,18 +23,43 @@
       <span header-link="examples"></span>Examples</span>
   </div>
 
-  <div class="doc-desc-2">
-    Tree contains groups of content. </div>
+  <div class="doc-title-4 mb-8">
+    Tree with Dynamic Data
+  </div>
   <div class="doc-example-container">
-    <div app-docs-example="tree-basic"></div>
+    <div app-docs-example="tree-dynamic-data"></div>
   </div>
 
   <div id="exampleWrapper">
-    <div class="doc-desc-2">
-      Tree can also contain other components such as checkbox. </div>
-    <div class="doc-example-container">
-      <div app-docs-example="tree-checkbox"></div>
+
+    <div class="doc-title-4 mb-8">
+      Tree with Flat Nodes
     </div>
+    <div class="doc-example-container">
+      <div app-docs-example="tree-flat-nodes"></div>
+    </div>
+
+    <div class="doc-title-4 mb-8">
+      Tree with Checkboxes
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="tree-checkbox-material"></div>
+    </div>
+
+    <div class="doc-title-4 mb-8">
+      Tree with Nested Nodes
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="tree-nested-nodes"></div>
+    </div>
+
+    <div class="doc-title-4 mb-8">
+      Tree with Partially Loaded Data
+    </div>
+    <div class="doc-example-container">
+      <div app-docs-example="tree-partially-loaded"></div>
+    </div>
+
   </div>
 
   <div class="doc-divider">
@@ -134,7 +159,8 @@
     Component Location for Designers
     <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
-  </div><a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+  </div>
+  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
