--- a/src/assets/documents/components/progressspinner.html
+++ b/src/assets/documents/components/progressspinner.html
@@ -4,7 +4,7 @@
 
 <body>
   <div class="doc-category-title ">
-    Button &amp; Indicatiors
+    Buttons &amp; Indicators
     <span class="docs-markdown-h3" id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
