262 Bottom Sheet	incorrect 'Usage & Content Guidelines' images.

--- a/src/assets/documents/components/bottomsheet.html
+++ b/src/assets/documents/components/bottomsheet.html
@@ -110,11 +110,11 @@
   </div>
 
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:509px">
-      <img src="assets/img/doc/bottomsheet-bottom-do.png" alt="">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center-no-scale" style="height:509px">
+      <img src="assets/img/doc/bottomsheet-bottom-do.png" alt="" height="95%">
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16" style="height:509px">
-      <img src="assets/img/doc/bottomsheet-bottom-dont.png" alt="">
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center-no-scale docs-mt16" style="height:509px">
+      <img src="assets/img/doc/bottomsheet-bottom-dont.png" alt="" height="95%">
     </div>
   </div>
 
@@ -125,11 +125,11 @@
   </div>
 
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:509px">
-      <img src="assets/img/doc/bottomsheet-scrim-do.png" alt="">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center-no-scale" style="height:509px">
+      <img src="assets/img/doc/bottomsheet-scrim-do.png" alt="" height="95%">
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16" style="height:509px">
-      <img src="assets/img/doc/bottomsheet-scrim-dont.png" alt="">
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center-no-scale docs-mt16" style="height:509px">
+      <img src="assets/img/doc/bottomsheet-scrim-dont.png" alt="" height="95%">
     </div>
   </div>
 
