--- a/src/assets/documents/components/table.html
+++ b/src/assets/documents/components/table.html
@@ -5,8 +5,7 @@
 <body>
   <div class="doc-category-title ">
     Data Table
-    <span class="docs-markdown-h3"
-          id="contents">
+    <span class="docs-markdown-h3" id="contents">
       <span header-link="contents"></span>Contents</span>
   </div>
   <div class="doc-title-1">
@@ -20,8 +19,7 @@
   </div>
   <div class="doc-title-2">
     Examples
-    <span class="docs-markdown-h3"
-          id="examples">
+    <span class="docs-markdown-h3" id="examples">
       <span header-link="examples"></span>Examples</span>
   </div>
   <div class="doc-desc-2">
@@ -39,8 +37,7 @@
   </div>
   <div class="doc-title-2">
     Props
-    <span class="docs-markdown-h3"
-          id="props">
+    <span class="docs-markdown-h3" id="props">
       <span header-link="props"></span>Props</span>
   </div>
   <div class="doc-desc-2">
@@ -60,9 +57,6 @@
       <tr>
         <td>arrowPosition</td>
         <td>Sets the position of the arrow that displays when sorted.
-
-
-
         </td>
         <td>string</td>
         <td>&apos;before&apos; | &apos;after&apos;</td>
@@ -70,9 +64,6 @@
       <tr>
         <td>disableClear</td>
         <td>Overrides the disable clear value of the containing MatSort for this MatSortable.
-
-
-
         </td>
         <td>boolean</td>
         <td></td>
@@ -80,9 +71,6 @@
       <tr>
         <td>disabled</td>
         <td>Whether the component is disabled.
-
-
-
         </td>
         <td>disabled</td>
         <td></td>
@@ -90,10 +78,6 @@
       <tr>
         <td>mat-sort-header</td>
         <td>ID of this sort header. If used within the context of a CdkColumnDef, this will default to the column&apos;s name.
-
-
-
-
         </td>
         <td>string</td>
         <td></td>
@@ -101,11 +85,6 @@
       <tr>
         <td>start</td>
         <td>Overrides the sort start value of the containing MatSort for this MatSortable.
-
-
-
-
-
         </td>
         <td>string</td>
         <td>&apos;asc&apos; | &apos;desc&apos;</td>
@@ -115,8 +94,7 @@
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Best Practices
-    <span class="docs-markdown-h3"
-          id="best_practices">
+    <span class="docs-markdown-h3" id="best_practices">
       <span header-link="best_practices"></span>Best Practices</span>
   </div>
 
@@ -145,8 +123,7 @@
 
   <div class="doc-title-2">
     Usage &amp; Content Guidelines
-    <span class="docs-markdown-h3"
-          id="content_guidelines">
+    <span class="docs-markdown-h3" id="content_guidelines">
       <span header-link="content_guidelines"></span>Content Guidelines</span>
   </div>
 
@@ -154,48 +131,35 @@
     As for expanded rows, use grey background color with top and bottom shadows to distinguish from main rows. </div>
 
   <div class="docs-guideline-group">
-    <div class="docs-usage-do docs-usage-w100 docs-usage-center"
-         style="height:448px">
-      <img src="assets/img/doc/table-do.png"
-           alt="">
+    <div class="docs-usage-do docs-usage-w100 docs-usage-center" style="height:448px">
+      <img src="assets/img/doc/table-do.png" alt="">
     </div>
-    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16"
-         style="height:448px">
-      <img src="assets/img/doc/table-dont.png"
-           alt="">
+    <div class="docs-usage-dont docs-usage-w100 docs-usage-center docs-mt16" style="height:448px">
+      <img src="assets/img/doc/table-dont.png" alt="">
     </div>
   </div>
 
 
-
-
-  <div class="doc-divider">
-
-  </div>
+  <div class="doc-divider"></div>
 
   <div class="doc-title-2">
     Design Specs
-    <span class="docs-markdown-h3"
-          id="design_specs">
+    <span class="docs-markdown-h3" id="design_specs">
       <span header-link="design_specs"></span>Design Specs</span>
   </div>
 
 
-  <div class="docs-usage-spec docs-usage-center"
-       style="height:512px">
-    <img src="assets/img/doc/table-spec.png"
-         alt="">
+  <div class="docs-usage-spec docs-usage-center-no-scale" style="height:512px">
+    <img src="assets/img/doc/table-spec.png" alt="" style="height:100%">
   </div>
 
   <div class="doc-divider"></div>
   <div class="doc-title-2">
     Component Location for Designers
-    <span class="docs-markdown-h3"
-          id="component_location_for_designers">
+    <span class="docs-markdown-h3" id="component_location_for_designers">
       <span header-link="component_location_for_designers"></span>Component Location for Designers</span>
   </div>
-  <a class="doc-download-link"
-     href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
+  <a class="doc-download-link" href="http://vizient-toolkit.interactivelabs.com/toolkit_material_library.sketch">Download Sektch File</a>
   <div class="doc-desc-2">
     For designers, to add this component to your design, follow this path within the Sketch App UI:
   </div>
